--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,27 +9,27 @@ on:
     workflow_dispatch:
 
 jobs:
-    colcon-test:
-        runs-on: ubuntu-latest
-        timeout-minutes: 10
-        steps:
-            - name: Checkout workspace
-              uses: actions/checkout@v6
+    # colcon-test:
+    #     runs-on: ubuntu-latest
+    #     timeout-minutes: 10
+    #     steps:
+    #         - name: Checkout workspace
+    #           uses: actions/checkout@v6
 
-            - name: Set up Python
-              uses: actions/setup-python@v6
-              with:
-                  python-version: "3.x"
+    #         - name: Set up Python
+    #           uses: actions/setup-python@v6
+    #           with:
+    #               python-version: "3.x"
 
-            - name: show installed python dependencies
-              run: |
-                  pip3 list
+    #         - name: show installed python dependencies
+    #           run: |
+    #               pip3 list
 
-            - name: Test
-              uses: ./.github/actions/
-              with:
-                  script: "./scripts/run-tests"
-                  run-website: "true"
+    #         - name: Test
+    #           uses: ./.github/actions/
+    #           with:
+    #               script: "./scripts/run-tests"
+    #               run-website: "true"
 
     ros-launch-test:
         runs-on: ubuntu-latest
@@ -46,33 +46,33 @@ jobs:
               run: |
                   ./scripts/test-ros-launch
 
-    ament-lint:
-        strategy:
-            fail-fast: false
-            matrix:
-                # mypy and ament_lint_common, except for copyright, cppcheck, cpplint, uncrustify, and pep257
-                linter: [lint_cmake, flake8, mypy, xmllint]
-        name: ament_${{ matrix.linter }}
-        runs-on: ubuntu-latest
-        timeout-minutes: 5
-        steps:
-            - name: Checkout workspace
-              uses: actions/checkout@v6
+    # ament-lint:
+    #     strategy:
+    #         fail-fast: false
+    #         matrix:
+    #             # mypy and ament_lint_common, except for copyright, cppcheck, cpplint, uncrustify, and pep257
+    #             linter: [lint_cmake, flake8, mypy, xmllint]
+    #     name: ament_${{ matrix.linter }}
+    #     runs-on: ubuntu-latest
+    #     timeout-minutes: 5
+    #     steps:
+    #         - name: Checkout workspace
+    #           uses: actions/checkout@v6
 
-            - name: Run linter
-              uses: ./.github/actions/
-              with:
-                  script: "./scripts/ament-lint"
-                  linter: ${{ matrix.linter }}
+    #         - name: Run linter
+    #           uses: ./.github/actions/
+    #           with:
+    #               script: "./scripts/ament-lint"
+    #               linter: ${{ matrix.linter }}
 
-    clang-tidy:
-        runs-on: ubuntu-latest
-        timeout-minutes: 15
-        steps:
-            - name: Checkout workspace
-              uses: actions/checkout@v6
+    # clang-tidy:
+    #     runs-on: ubuntu-latest
+    #     timeout-minutes: 15
+    #     steps:
+    #         - name: Checkout workspace
+    #           uses: actions/checkout@v6
 
-            - name: Run linter
-              uses: ./.github/actions/
-              with:
-                  script: "./scripts/clang-tidy"
+    #         - name: Run linter
+    #           uses: ./.github/actions/
+    #           with:
+    #               script: "./scripts/clang-tidy"
